--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,4 @@
 [pytest]
-pythonpath = blogicum/
-DJANGO_SETTINGS_MODULE = blogicum.settings
-norecursedirs = env/* venv/*
-addopts = -vv -p no:cacheprovider --disable-warnings
-testpaths = tests/
-python_files = test_*.py
+DJANGO_SETTINGS_MODULE = blogicum.blogicum.settings
+pythonpath = blogicum
+testpaths = tests
