--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = blogicum.blogicum.settings
-pythonpath = blogicum
+DJANGO_SETTINGS_MODULE = blogicum.settings
+pythonpath = .
 testpaths = tests
