--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = blogicum.blogicum.settings
-pythonpath = .
-testpaths = tests
+pythonpath = blogicum/
+DJANGO_SETTINGS_MODULE = blogicum.settings
+norecursedirs = env/* venv/*
+addopts = -vv -p no:cacheprovider --disable-warnings
+testpaths = tests/
+python_files = test_*.py
