--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-pythonpath = blogicum/
+pythonpath = .
 DJANGO_SETTINGS_MODULE = blogicum.settings
 norecursedirs = env/* venv/*
 addopts = -vv -p no:cacheprovider --disable-warnings
