--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 pythonpath = .
-DJANGO_SETTINGS_MODULE = blogicum.settings
+DJANGO_SETTINGS_MODULE = blogicum.blogicum.settings
 norecursedirs = env/* venv/*
 addopts = -vv -p no:cacheprovider --disable-warnings
 testpaths = tests/
